--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,37 @@
 
 .header{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
+    color: seashell;
+    animation:cubic-bezier(0.47, 0, 0.745, 0.715);
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+ 
+.topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+.welcomemessage {
+    font-family: Arial, Helvetica, sans-serif;
     color: seashell;
 }
