--- a/assets/style.css
+++ b/assets/style.css
@@ -8,19 +8,17 @@
     align-items: left;
     justify-content: left;
     color: seashell;
-    animation:cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 
 .topnav {
-    background-color: #333;
     overflow: hidden;
 }
  
 .topnav a {
-    float: right;
+    float: inline-start;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 18px 16px;
     text-decoration: none;
     font-size: 17px;
   }
@@ -31,7 +29,7 @@
   }
   
 .topnav a.active {
-    background-color: #04AA6D;
+    background-color: grey;
     color: white;
   }
 
