--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,13 @@
 * {
     font-family: 'Times New Roman', Times, serif;
-    background-color:darkslategray
+    background-color:seashell; 
 }
 
 .header{
     display: flex;
     align-items: left;
     justify-content: left;
-    color: seashell;
+    color: darkslategrey;
 }
 
 .topnav {
@@ -16,7 +16,7 @@
  
 .topnav a {
     float: inline-start;
-    color: #f2f2f2;
+    color: darkslategrey;
     text-align: center;
     padding: 18px 16px;
     text-decoration: none;
@@ -35,5 +35,23 @@
 
 .welcomemessage {
     font-family: Arial, Helvetica, sans-serif;
-    color: seashell;
+    color: darkslategray;
 }
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that float next to each other */
+  .column-2 {
+    float: left;
+    width: 45%;
+    padding: 40px;
+    padding-left:70px;
+    padding-right: 70px;
+    height: 475px;
+    margin:30px;
+    margin-right:30px;
+    margin-bottom: 70px;
+    background-color: darkolivegreen;
+    line-height:2;
+  }
