--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: 'Times New Roman', Times, serif;
     background-color:seashell; 
+    box-sizing: border-box;
 }
 
 .header{
@@ -37,21 +38,21 @@
     font-family: Arial, Helvetica, sans-serif;
     color: darkslategray;
 }
-* {
-    box-sizing: border-box;
-  }
-  
-  /* Create two equal columns that float next to each other */
-  .column-2 {
+.box1 {
     float: left;
     width: 45%;
-    padding: 40px;
-    padding-left:70px;
-    padding-right: 70px;
-    height: 475px;
-    margin:30px;
-    margin-right:30px;
-    margin-bottom: 70px;
+    padding: 4px;
+    padding-left: 60px;
+    padding-right: 60px;
+    height: 400px;
+    margin: 30px;
     background-color: darkolivegreen;
-    line-height:2;
-  }
+    line-height:1.5;
+    display: inline-block;
+}
+
+.box1-img {
+    object-fit: contain;
+    width: 90%;
+    height: auto;
+}
