--- a/assets/style.css
+++ b/assets/style.css
@@ -38,13 +38,14 @@
     font-family: Arial, Helvetica, sans-serif;
     color: darkslategray;
 }
+
 .box1 {
     float: left;
     width: 45%;
-    padding: 4px;
+    padding: 3px;
     padding-left: 60px;
     padding-right: 60px;
-    height: 400px;
+    height: 250px;
     margin: 30px;
     background-color: darkolivegreen;
     line-height:1.5;
@@ -53,6 +54,8 @@
 
 .box1-img {
     object-fit: contain;
-    width: 90%;
+    width: 55%;
     height: auto;
+    align: center;
+    display: inline-block;
 }
