--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,6 @@
     margin: 30px;
     background-color: darkolivegreen;
     line-height:1.5;
-
 }
 
 .box1-img {
@@ -59,3 +58,54 @@
     box-align: center;
     display: inline-block;
 }
+
+.button-container {
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+.button-column1 {
+    float: inline-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    flex-basis: calc(50% - 10px);
+    max-width: calc(50% - 10px);
+    margin-bottom: 20px;
+}
+
+.button-column1 {
+    float: inline-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    flex-basis: calc(50% - 10px);
+    max-width: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
+
+  button {
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #333;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 10px;
+    flex: 1;
+    max-width: 200px;
+  }
+  
+  button:hover {
+    background-color: #555;
+  }
