--- a/assets/style.css
+++ b/assets/style.css
@@ -41,22 +41,36 @@
 
 .box1 {
     float: left;
-    width: 45%;
-    padding: 3px;
-    padding-left: 60px;
-    padding-right: 60px;
+    width: 38%;
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
     height: 250px;
     margin: 30px;
     background-color: darkolivegreen;
     line-height:1.5;
 }
 
-.box1-img {
-    object-fit: contain;
-    width: 55%;
-    height: auto;
-    box-align: center;
-    display: inline-block;
+.box2 {
+    float: left;
+    width: 38%;
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    height: 250px;
+    margin: 30px;
+    line-height:1.5;
+    background-color: darkolivegreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box2-img {
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .button-container {
@@ -79,31 +93,17 @@
     margin-bottom: 20px;
 }
 
-.button-column1 {
-    float: inline-end;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-right: 20px;
-    flex-basis: calc(50% - 10px);
-    max-width: calc(50% - 10px);
-    margin-bottom: 20px;
-  }
-
-  button {
-    padding: 15px 30px;
-    font-size: 18px;
+button {
+    padding: 45px 50px;
+    font-size: 25px;
     font-weight: bold;
     color: #fff;
-    background-color: #333;
+    background-color: grey;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
-    margin: 10px;
-    flex: 1;
-    max-width: 200px;
+    margin: 40px;
   }
   
   button:hover {
