--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,14 @@
 * {
     font-family: 'Times New Roman', Times, serif;
-    background-color:seashell; 
+    background-color: darkslategrey;
     box-sizing: border-box;
 }
-
+  
 .header{
     display: flex;
-    align-items: left;
-    justify-content: left;
-    color: darkslategrey;
+    align-items: center;
+    justify-content: center;
+    color: seashell
 }
 
 .topnav {
@@ -16,8 +16,8 @@
 }
  
 .topnav a {
-    float: inline-start;
-    color: darkslategrey;
+    float: inline-end;
+    color: seashell;
     text-align: center;
     padding: 18px 16px;
     text-decoration: none;
@@ -41,18 +41,22 @@
 
 .box1 {
     float: left;
+    border-radius: 25px;
     width: 38%;
     padding: 5px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     height: 250px;
     margin: 30px;
+    color: seashell;
     background-color: darkolivegreen;
     line-height:1.5;
+    align-items: center;
 }
 
 .box2 {
     float: left;
+    border-radius: 25px;
     width: 38%;
     padding: 5px;
     padding-left: 50px;
@@ -69,43 +73,25 @@
 .box2-img {
     max-width: 100%;
     max-height: 100%;
+    border-radius: 25px;
     text-align: center;
     vertical-align: middle;
 }
-
-.button-container {
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-.button-column1 {
-    float: inline-end;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-right: 20px;
-    flex-basis: calc(50% - 10px);
-    max-width: calc(50% - 10px);
-    margin-bottom: 20px;
+.box1-aboutme {
+    background: darkolivegreen;
+    border-radius: 25px;
+    font: 18px; 
 }
 
-button {
-    padding: 45px 50px;
-    font-size: 25px;
-    font-weight: bold;
-    color: #fff;
+.projects1{
+    float: left;
     background-color: grey;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    margin: 40px;
-  }
-  
-  button:hover {
-    background-color: #555;
-  }
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 25px;
+    font: 10px;
+    color: seashell;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
