--- a/assets/style.css
+++ b/assets/style.css
@@ -6,33 +6,35 @@
   
 .header{
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding: 15px 15px;
+    text-align: center;
     color: seashell
 }
 
-.topnav {
-    overflow: hidden;
-}
- 
-.topnav a {
-    float: inline-end;
+.topnav button {
+    display: flex;
+    justify-content: center;
     color: seashell;
     text-align: center;
-    padding: 18px 16px;
+    padding: 15px 16px;
     text-decoration: none;
     font-size: 17px;
   }
   
-.topnav a:hover {
+.topnav button:hover {
     background-color: #ddd;
     color: black;
   }
   
-.topnav a.active {
-    background-color: grey;
+.topnav button.active {
     color: white;
   }
+
+.homebutton {
+    display: flex;
+    justify-content: center;
+   }
 
 .welcomemessage {
     font-family: Arial, Helvetica, sans-serif;
@@ -40,18 +42,24 @@
 }
 
 .box1 {
-    float: left;
+    float:left; 
     border-radius: 25px;
     width: 38%;
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
     height: 250px;
-    margin: 30px;
+    margin: 75px;
     color: seashell;
     background-color: darkolivegreen;
     line-height:1.5;
     align-items: center;
+}
+
+.box1-aboutme {
+  background: darkolivegreen;
+  border-radius: 25px;
+  font: 18px; 
 }
 
 .box2 {
@@ -62,7 +70,7 @@
     padding-left: 50px;
     padding-right: 50px;
     height: 250px;
-    margin: 30px;
+    margin: 75px;
     line-height:1.5;
     background-color: darkolivegreen;
     display: flex;
@@ -77,21 +85,20 @@
     text-align: center;
     vertical-align: middle;
 }
-.box1-aboutme {
-    background: darkolivegreen;
-    border-radius: 25px;
-    font: 18px; 
+
+.body {
+  display: flex;
+  justify-content: center;
+  background-color: grey;
+  align-items: center;
+  padding-left: 45px;
+  padding-right: 45px;
+  border-radius: 25px;
+  color: seashell;
 }
 
-.projects1{
-    float: left;
+.body1{
     background-color: grey;
-    padding-left: 50px;
-    padding-right: 50px;
-    border-radius: 25px;
-    font: 10px;
-    color: seashell;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 0 auto;
+    font-size: 17px;
 }
