--- a/assets/style.css
+++ b/assets/style.css
@@ -1,47 +1,47 @@
 * {
     font-family: 'Times New Roman', Times, serif;
-    background-color: black;
     box-sizing: border-box;
 }
 
-.header{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    padding: 15px 15px;
-    text-align: center;
-    color: seashell
+.default {
+  background: rgb(75,86,33);
+  background: radial-gradient(circle, rgba(75,86,33,1) 5%, rgba(49,66,114,1) 44%, rgba(33,66,41,1) 84%);  
 }
 
-.topnav button {
+.header {
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
+    position: relative;
+    padding: 150px 200px;
+    text-align: center;
+    color: seashell;
+    font-size: 65px;
+}
+
+.topnav {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+ }
+
+.topnav a {
     color: seashell;
     text-align: center;
     padding: 15px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 14px;
   }
   
-.topnav button:hover {
+.topnav a:hover {
     background-color: #ddd;
     color: black;
   }
   
-.topnav button.active {
+.topnav a.active {
     color: white;
+    border-radius: 25px;
   }
-
-.topnav {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-   }
-
-.welcomemessage {
-    font-family: Arial, Helvetica, sans-serif;
-    color: darkslategray;
-}
 
 .about-container {
   display: flex;
@@ -50,37 +50,33 @@
 }
 
 .box1 {
-    border-radius: 25px;
-    width: 38%;
-    padding: 5px;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin: 75px;
+    width: 50%;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 65px;
     color: seashell;
-    background-color: darkolivegreen;
     line-height:1.5;
     align-items: center;
 }
 
 .box1-aboutme {
-  background: darkolivegreen;
   border-radius: 25px;
   font: 18px; 
+  align-items: center;
 }
 
 .box2 {
     display: flex;
+    justify-content: center;
     border-radius: 25px;
     width: 38%;
-    padding: 5px;
+    padding: 3px;
     padding-left: 50px;
     padding-right: 50px;
     height: 250px;  
     margin: 75px;
     line-height:1.5;
-    background-color: darkolivegreen;
-    justify-content: center;
-}
+    }
 
 .box2-img {
     max-width: 100%;
