--- a/assets/style.css
+++ b/assets/style.css
@@ -160,3 +160,14 @@
   color:#3366cc;
   text-decoration:none;
 }
+
+.carousel-item {
+  display: flex;
+  justify-content: center;
+  height: 12rem;
+  width: auto;
+  background: #777;
+  border-radius: 25px;
+  padding: 15px;
+  margin: 65px;
+}
