--- a/assets/style.css
+++ b/assets/style.css
@@ -104,20 +104,45 @@
 
 .contact-section {
   align-items: center;
+  padding: 10px;
   color: seashell;
   font: 14px;
   line-height: 2.0px;
 }
 
-.projects-section {
-  display:flex;
+.project-header {
+  display: flex;
   justify-content: center;
   align-items: center;
   color: seashell;
-  font: 14px;
-  line-height: 2.0px;
-  margin: 75px;
+  padding: 50px;
 }
+.projects-section {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+
+.carousel-section {
+  display: flex;
+  margin: 0;
+  align-items: center;
+  padding: 50px;
+  }
+
+.carousel-img {
+  width: auto;
+  margin: 0;
+  height: 450px;
+  margin: auto; 
+  display: block;
+  }
+
+
+
+  
 .body {
   display: flex;
   justify-content: center;
@@ -131,7 +156,13 @@
   height: 50px;  
   }
 
+
 .site-footer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-top: auto;
+  bottom: 0;
   background-color:#26272b;
   padding:35px 0 10px;
   font-size:15px;
@@ -161,13 +192,5 @@
   text-decoration:none;
 }
 
-.carousel-item {
-  display: flex;
-  justify-content: center;
-  height: 12rem;
-  width: auto;
-  background: #777;
-  border-radius: 25px;
-  padding: 15px;
-  margin: 65px;
-}
+
+
