--- a/assets/style.css
+++ b/assets/style.css
@@ -230,5 +230,33 @@ svg text {
   .header {
     margin: auto !important;
   }
+  .about-container {
+    width: 100% !important;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .contact-section {
+    display: block;
+  }
+
+  .site-footer {
+    width: auto !important;
+    height: 250px;
+    padding: 0px;
+  }
+
+  .text-footer {
+    display: flex;
+    justify-content: center;
+    border-radius: 25px;
+    width: 38%;
+    padding: 3px;
+    padding-left: 50px;
+    padding-right: 50px;
+    height: 100px;  
+    line-height:1.5;
+    white-space: nowrap;
+  }
 }
 
