--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 .default {
   background: rgb(75,86,33);
   background: radial-gradient(circle, rgba(75,86,33,1) 5%, rgba(49,66,114,1) 44%, rgba(33,66,41,1) 84%);  
